--- a/webapp/html/index.html
+++ b/webapp/html/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css"> 
-    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="">
 
     <!-- CSS do card -->
     <link rel="stylesheet" href="../css/estilo.css">
