--- a/webapp/html/index.html
+++ b/webapp/html/index.html
@@ -7,10 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css"> 
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
 
     <!-- CSS do card -->
-    <link rel="stylesheet" href="../css/estilo.css">
 
     <script src="../../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
