--- a/webapp/html/index.html
+++ b/webapp/html/index.html
@@ -61,7 +61,7 @@
                 <div class="grupo-card">
                     <div class="card">
                         <div class="imagem">
-                            <img class="img1" src="../img/img1.jpg" alt="">
+                            <img src="../img/no-image.png" alt="">
                         </div>
                         <h2>Título</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem quisquam iste omnis placeat a id nobis sunt culpa aut consequuntur.</p>
@@ -73,7 +73,7 @@
                     </div>
                     <div class="card">
                         <div class="imagem">
-                            <img class="img1" src="../img/img2.jpg" alt="">
+                            <img src="../img/no-image.png" alt="">
                         </div>
                         <h2>Título</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem quisquam iste omnis placeat a id nobis sunt culpa aut consequuntur.</p>
@@ -85,7 +85,7 @@
                     </div>
                     <div class="card">
                         <div class="imagem">
-                            <img class="img1" src="../img/img3.jpg" alt="">
+                            <img src="../img/no-image.png" alt="">
                         </div>
                         <h2>Título</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem quisquam iste omnis placeat a id nobis sunt culpa aut consequuntur.</p>
