--- a/webapp/html/index.html
+++ b/webapp/html/index.html
@@ -30,7 +30,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ml-auto">
+                    <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
                             <a class="nav-link" href="#">Produtos Prontos</a>
                         </li>
@@ -103,8 +103,12 @@
         </section>
     </main>
     
-    <footer>
-
+    <footer class="py-3">
+        <div class="container">
+            <div class="d-flex align-items-center justify-content-center">
+                    Copyright © 2023 SlothCode. Todos os direitos reservados.
+            </div>
+          </div>
     </footer>
 </body>
 
