--- a/webapp/html/index.html
+++ b/webapp/html/index.html
@@ -63,27 +63,41 @@
                         <div class="imagem">
                             <img src="../img/no-image.png" alt="">
                         </div>
-                        <h2>Título</h2>
+                         <div class="row align-items-baseline mb-2 flex-nowrap">
+                             <h2 class="col-4">Título</h2>
+                             <div class="col-8 detalhes">
+                                <span class="preco">Preço:</span> <span class="valor">R$ 500</span> 
+                            </div>
+                         </div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem quisquam iste omnis placeat a id nobis sunt culpa aut consequuntur.</p>
-                        <div class="detalhes"><span class="preco">Preço:</span> <span class="valor">R$ 500</span> </div>
+                        <!-- detalhes -->
                         <a class="btn cor1" href="">Compra agora</a>
                     </div>
                     <div class="card">
                         <div class="imagem">
                             <img src="../img/no-image.png" alt="">
                         </div>
-                        <h2>Título</h2>
+                        <div class="row align-items-baseline mb-2 flex-nowrap">
+                            <h2 class="col-4">Título</h2>
+                            <div class="col-8 detalhes">
+                               <span class="preco">Preço:</span> <span class="valor">R$ 500</span> 
+                           </div>
+                        </div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem quisquam iste omnis placeat a id nobis sunt culpa aut consequuntur.</p>
-                        <div class="detalhes"><span class="preco">Preço:</span> <span class="valor">R$ 500</span> </div>
+            
                         <a class="btn cor1" href="">Compra agora</a>
                     </div>
                     <div class="card">
                         <div class="imagem">
                             <img src="../img/no-image.png" alt="">
                         </div>
-                        <h2>Título</h2>
+                        <div class="row align-items-baseline mb-2 flex-nowrap">
+                            <h2 class="col-4">Título</h2>
+                            <div class="col-8 detalhes">
+                               <span class="preco">Preço:</span> <span class="valor">R$ 500</span> 
+                           </div>
+                        </div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem quisquam iste omnis placeat a id nobis sunt culpa aut consequuntur.</p>
-                        <div class="detalhes"><span class="preco">Preço:</span> <span class="valor">R$ 500</span> </div>
                         <a class="btn cor1" href="">Compra agora</a>
 
                     </div>
