--- a/webapp/html/index.html
+++ b/webapp/html/index.html
@@ -138,11 +138,7 @@
                     <div class="col-lg-5 descricao">
                         <h3>{{ name }}</h3>
                         <p>{{ description }}</p>
-                        <div class="d-flex icon-tecnologias">
-                            <i class="fa-brands fa-html5"></i>
-                            <i class="fa-brands fa-css3-alt"></i>
-                            <i class="fa-brands fa-js"></i>
-                            <i class="fa-brands fa-php"></i>
+                        <div class="d-flex icon-tecnologias" v-html="icones">
                         </div>
                     </div>
                 </div>
@@ -171,10 +167,11 @@
             data: {
                 name: '',
                 description: 'Passe o mouse para exibir informações!',
+                icones: '',
                 perfil: {
                     1: {
                         name: 'José Peterson',
-                        description: 'Olá, sou um desenvolvedor Full Stack, especializado em Front-end e Desktop. Tenho experiência em tecnologias como Java, Spring Boot, Hibernate, Mysql, Vue, HTML e CSS, e trabalho com dedicação para produzir soluções inovadoras e eficientes para os clientes.'
+                        description: 'Olá, sou um desenvolvedor Full Stack, especializado em Front-end e Desktop. Tenho experiência em tecnologias como Java, Spring Boot, Hibernate, Mysql e Vue, e trabalho com dedicação para produzir soluções inovadoras e eficientes para os clientes.'
                     },
                     2: {
                         name: 'Valter Junior',
@@ -184,12 +181,25 @@
                         name: 'Antonia Henrique',
                         description: 'Seja bem-vindo! Ofereço serviços de alta qualidade na área de design e desenvolvimento front-end, com ampla experiência em ferramentas como Photoshop, Adobe e HTML/CSS. Estou pronto para atender às suas necessidades e garantir um resultado incrível.'
                     }
+                },
+                tecnologia: {
+                    1:{
+                        icones: '<i class="fa-brands fa-java"></i> <i class="fa fa-database"></i> <i class="fa-brands fa-vuejs"></i>',
+                    },
+                    2:{
+                        icones: '<i class="fa-brands fa-php"></i> <i class="fa-brands fa-laravel"></i> <i class="fa-brands fa-python"></i> <i class="fa-brands fa-js"></i>',
+                    },
+                    3:{
+                        icones: '<i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i> <i class="fa-brands fa-sass"></i>',
+                    }
+                    
                 }
             },
             methods: {
                 setPerfil(value) {
                     this.name = this.perfil[value].name;
                     this.description = this.perfil[value].description;
+                    this.icones = this.tecnologia[value].icones;
                 }
             }
         });
