--- a/webapp/html/index.html
+++ b/webapp/html/index.html
@@ -150,6 +150,39 @@
 
             <h2 class="categoria mb-5">Contato</h2>
 
+            <div class="container">
+                <div class="row p-2">
+                    <div class="col-md endereco ps-4">
+                        <h3>Entre em contato conosco</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim perferendis omnis cumque aspernatur.</p>
+                        <span>Telefone: </span><span class="numero">(99) 98888-8888</span>
+                        <h4>Siga-nos</h4>
+                        <div class="logos-redes-sociais mt-3">
+                            <i class="fa-brands fa-instagram"></i>
+                            <i class="fa-brands fa-facebook"></i>
+                            <i class="fa-brands fa-github"></i>
+                            <i class="fa-brands fa-twitter"></i>
+                        </div>
+                    </div>
+                    <div class="col-md formulario-contato p-3">
+
+                        <form action="" method="get">
+                            <div class="form-floating mb-3 campo-texto">
+                                <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
+                                <label for="floatingInput">Seu Nome</label>
+                            </div>
+                            <div class="form-floating mb-3 campo-texto">
+                                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                                <label for="floatingInput">Email address</label>
+                            </div>
+                            <div class="form-floating campo-texto">
+                                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+                                <label for="floatingTextarea2">Comments</label>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
