--- a/webapp/html/index.html
+++ b/webapp/html/index.html
@@ -65,17 +65,20 @@
             <div class="container_card">
                 <div class="grupo-card">
                     <div class="card">
+                        <div class="card-header">
+                            <h2 class="mb-1">Software em Java</h2>
+                        </div>
                         <div class="imagem">
                             <img src="../img/no-image.png" alt="">
                         </div>
                         <div class="row align-items-baseline mb-2 flex-nowrap">
-                            <h2 class="col-4">Título</h2>
-                            <div class="col-8 detalhes">
+                            
+                            <div class="detalhes">
                                 <span class="preco">Preço:</span> <span class="valor">R$ 500</span>
                             </div>
                         </div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem quisquam iste omnis placeat a
-                            id nobis sunt culpa aut consequuntur.</p>
+                        <p> Otimize suas vendas com nosso poderoso software de comércio. Possui 
+                            gerenciamento de estoque.</p>
                         <!-- detalhes -->
                         <a class="btn cor1" href="">Compra agora</a>
                     </div>
@@ -93,6 +96,36 @@
                             id nobis sunt culpa aut consequuntur.</p>
 
                         <a class="btn cor1" href="">Compra agora</a>
+                    </div>
+                    <div class="card">
+                        <div class="imagem">
+                            <img src="../img/no-image.png" alt="">
+                        </div>
+                        <div class="row align-items-baseline mb-2 flex-nowrap">
+                            <h2 class="col-4">Título</h2>
+                            <div class="col-8 detalhes">
+                                <span class="preco">Preço:</span> <span class="valor">R$ 500</span>
+                            </div>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem quisquam iste omnis placeat a
+                            id nobis sunt culpa aut consequuntur.</p>
+                        <a class="btn cor1" href="">Compra agora</a>
+
+                    </div>
+                    <div class="card">
+                        <div class="imagem">
+                            <img src="../img/no-image.png" alt="">
+                        </div>
+                        <div class="row align-items-baseline mb-2 flex-nowrap">
+                            <h2 class="col-4">Título</h2>
+                            <div class="col-8 detalhes">
+                                <span class="preco">Preço:</span> <span class="valor">R$ 500</span>
+                            </div>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem quisquam iste omnis placeat a
+                            id nobis sunt culpa aut consequuntur.</p>
+                        <a class="btn cor1" href="">Compra agora</a>
+
                     </div>
                     <div class="card">
                         <div class="imagem">
