--- a/webapp/html/index.html
+++ b/webapp/html/index.html
@@ -195,7 +195,7 @@
                             <i class="fa-brands fa-twitter"></i>
                         </div>
                     </div>
-                    <div class="col-md formulario-contato p-3">
+                    <div class="col-md formulario-contato mt-4 mt-md-0 p-3">
 
                         <form action="" method="get">
                             <div class="form-floating mb-3 campo-texto">
