--- a/webapp/html/index.html
+++ b/webapp/html/index.html
@@ -66,7 +66,7 @@
                 <div class="grupo-card">
                     <div class="card">
                         <div class="card-header">
-                            <h2 class="mb-1">Software em Java</h2>
+                            <h2>Software em Java</h2>
                         </div>
                         <div class="imagem">
                             <img src="../img/no-image.png" alt="">
@@ -82,66 +82,7 @@
                         <!-- detalhes -->
                         <a class="btn cor1" href="">Compra agora</a>
                     </div>
-                    <div class="card">
-                        <div class="imagem">
-                            <img src="../img/no-image.png" alt="">
-                        </div>
-                        <div class="row align-items-baseline mb-2 flex-nowrap">
-                            <h2 class="col-4">Título</h2>
-                            <div class="col-8 detalhes">
-                                <span class="preco">Preço:</span> <span class="valor">R$ 500</span>
-                            </div>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem quisquam iste omnis placeat a
-                            id nobis sunt culpa aut consequuntur.</p>
 
-                        <a class="btn cor1" href="">Compra agora</a>
-                    </div>
-                    <div class="card">
-                        <div class="imagem">
-                            <img src="../img/no-image.png" alt="">
-                        </div>
-                        <div class="row align-items-baseline mb-2 flex-nowrap">
-                            <h2 class="col-4">Título</h2>
-                            <div class="col-8 detalhes">
-                                <span class="preco">Preço:</span> <span class="valor">R$ 500</span>
-                            </div>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem quisquam iste omnis placeat a
-                            id nobis sunt culpa aut consequuntur.</p>
-                        <a class="btn cor1" href="">Compra agora</a>
-
-                    </div>
-                    <div class="card">
-                        <div class="imagem">
-                            <img src="../img/no-image.png" alt="">
-                        </div>
-                        <div class="row align-items-baseline mb-2 flex-nowrap">
-                            <h2 class="col-4">Título</h2>
-                            <div class="col-8 detalhes">
-                                <span class="preco">Preço:</span> <span class="valor">R$ 500</span>
-                            </div>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem quisquam iste omnis placeat a
-                            id nobis sunt culpa aut consequuntur.</p>
-                        <a class="btn cor1" href="">Compra agora</a>
-
-                    </div>
-                    <div class="card">
-                        <div class="imagem">
-                            <img src="../img/no-image.png" alt="">
-                        </div>
-                        <div class="row align-items-baseline mb-2 flex-nowrap">
-                            <h2 class="col-4">Título</h2>
-                            <div class="col-8 detalhes">
-                                <span class="preco">Preço:</span> <span class="valor">R$ 500</span>
-                            </div>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem quisquam iste omnis placeat a
-                            id nobis sunt culpa aut consequuntur.</p>
-                        <a class="btn cor1" href="">Compra agora</a>
-
-                    </div>
                 </div>
         </section>
 
@@ -159,13 +100,13 @@
                 <div class="row">
                     <div class="col-lg-7 align-items-center justify-content-around grupo-fotos-perfil">
                         <div class="foto-perfil" v-on:mousemove="setPerfil(1)">
-                            <img class="img-fluid" src="../img/no-image.png" alt="">
+                            <img class="img-fluid" src="../img/peterson.webp" alt="">
                         </div>
                         <div class="foto-perfil" v-on:mousemove="setPerfil(2)">
-                            <img class="img-fluid" src="../img/no-image.png" alt="">
+                            <img class="img-fluid" src="../img/valter.jpg" alt="">
                         </div>
                         <div class="foto-perfil" v-on:mousemove="setPerfil(3)">
-                            <img class="img-fluid" src="../img/no-image.png" alt="">
+                            <img class="img-fluid" src="../img/henrique.jpg" alt="">
                         </div>
                     </div>
                     <div class="col-lg-5 descricao">
@@ -180,7 +121,7 @@
         </section>
 
         <section id="contato">
-            
+
             <div class="container">
                 <div class="row p-2">
                     <div class="col-md endereco ps-4">
@@ -189,8 +130,6 @@
                         <span>Telefone: </span><span class="numero">(99) 98888-8888</span>
                         <h4>Siga-nos</h4>
                         <div class="logos-redes-sociais mt-3">
-                            <i class="fa-brands fa-instagram"></i>
-                            <i class="fa-brands fa-facebook"></i>
                             <i class="fa-brands fa-github"></i>
                             <i class="fa-brands fa-twitter"></i>
                         </div>
@@ -200,7 +139,7 @@
                         <form action="" method="get">
                             <div class="form-floating mb-3 campo-texto">
                                 <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
-                                <label for="floatingInput">Seu Nome</label>
+                                <label for="floatingInput">Name</label>
                             </div>
                             <div class="form-floating mb-3 campo-texto">
                                 <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
