--- a/webapp/html/index.html
+++ b/webapp/html/index.html
@@ -26,7 +26,7 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <!-- <img src="logo.svg" width="30" height="30" class="d-inline-block align-top" alt=""> -->
-                    Slothcode
+                    <img src="../img/logo.png" width="100" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
