--- a/webapp/html/index.html
+++ b/webapp/html/index.html
@@ -26,7 +26,7 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <!-- <img src="logo.svg" width="30" height="30" class="d-inline-block align-top" alt=""> -->
-                    <img src="../img/logo.png" width="100" alt="">
+                    <img src="../img/logo.png" width="55" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -162,8 +162,14 @@
         </section>
 
         <section id="produtos-personalizado">
-
-            <h2 class="categoria mb-5">Software Personalizados</h2>
+            <div id="area-text">
+                <h1 class="categoria mb-5 mt-5">Personalize o seu Pedido</h1>
+                <p>Não encontrou o que você deseja? Clique no botão abaixo para personalizar o seu pedido!</p>
+                <button class="personalizar-btn mb-5">Montar Software</button>
+            </div>
+            <div id="img">
+                <img src="/webapp/img/programmer.png" alt="">
+            </div>
 
         </section>
 
