--- a/webapp/html/index.html
+++ b/webapp/html/index.html
@@ -167,8 +167,8 @@
                 <p>Não encontrou o que você deseja? Clique no botão abaixo para personalizar o seu pedido!</p>
                 <button class="personalizar-btn mb-5">Montar Software</button>
             </div>
-            <div id="img">
-                <img src="/webapp/img/programmer.png" alt="">
+            <div>
+                <img class="img-fluid" src="/webapp/img/programmer.png" alt="">
             </div>
 
         </section>
