--- a/webapp/html/index.html
+++ b/webapp/html/index.html
@@ -24,9 +24,10 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand d-flex gap-2" href="#">
                     <!-- <img src="logo.svg" width="30" height="30" class="d-inline-block align-top" alt=""> -->
                     <img src="../img/logo.png" width="55" alt="">
+                    <span class="align-self-center">Slothcode</span>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -162,13 +163,15 @@
         </section>
 
         <section id="produtos-personalizado">
-            <div id="area-text">
-                <h1 class="categoria mb-5 mt-5">Personalize o seu Pedido</h1>
-                <p>Não encontrou o que você deseja? Clique no botão abaixo para personalizar o seu pedido!</p>
-                <button class="personalizar-btn mb-5">Montar Software</button>
-            </div>
-            <div>
-                <img class="img-fluid" src="/webapp/img/programmer.png" alt="">
+            <div class="container-fluid d-flex justify-content-between">
+                <div class="area-text">
+                    <h1 class="categoria mb-4 mt-5">Personalize o seu Pedido</h1>
+                    <p>Não encontrou o que você deseja? Clique no botão abaixo para personalizar o seu pedido!</p>
+                    <button class="personalizar-btn mb-5">Montar Software</button>
+                </div>
+                <div class="">
+                    <img class="img-fluid" src="/webapp/img/programmer.png" alt="">
+                </div>
             </div>
 
         </section>
