--- a/webapp/html/index.html
+++ b/webapp/html/index.html
@@ -16,7 +16,8 @@
     <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
     <script src="../../node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
 
-  
+    
+    
 
 </head>
 
@@ -248,6 +249,7 @@
     </footer>
 
     <script src="../js/main.js"></script>
+    <script src="../js/dinamica.js"></script>
 
 </body>
 
