--- a/webapp/html/index.html
+++ b/webapp/html/index.html
@@ -227,7 +227,7 @@
                     <button class="personalizar-btn mb-5">Montar Software</button>
                 </div>
                 <div class="">
-                    <img class="img-fluid" src="/webapp/img/programmer.png" alt="">
+                    <img class="img-fluid" src="/webapp/img/programmer2.png" alt="">
                 </div>
             </div>
 
