--- a/homepage-vue/index.html
+++ b/homepage-vue/index.html
@@ -9,9 +9,7 @@
     <link rel="stylesheet" href="/src/assets/style.css">
   </head>
   <body>
-    <div id="app">
-        
-    </div>
+    <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
