--- a/homepage-vue/index.html
+++ b/homepage-vue/index.html
@@ -37,6 +37,23 @@
         </div>
       </div>
 
+      <div id="section-about" class="row bg-black">
+
+        <div id="img-about" class="d-none d-md-block col-md-5">
+
+        </div>
+        <hr class="d-md-none w-50 ms-5 bg-white opacity-100 my-5" style="height: 3px;">
+        <div class="col col-md-7 content-about">
+            <div class="text-white mb-5">
+                <h2 class="title-about">Sua Jornada Rumo ao <span class="text-purple">Futuro</span> Digital</h2>
+                <p class="text-about">Seu passaporte para o futuro digital está nas nossas mãos. Desenvolvemos soluções inovadoras que catapultam sua presença online para o próximo nível. Estamos prontos para guiá-lo nessa jornada transformadora. Vamos criar juntos o caminho para o sucesso digital.</p>
+            </div>
+            <button class="btn btn-reuniao bg-purple text-white" type="button">Contato</button>
+        </div>
+        
+
+      </div>
+
     </div>
     <script type="module" src="/src/main.js"></script>
   </body>
