--- a/homepage-vue/index.html
+++ b/homepage-vue/index.html
@@ -27,7 +27,7 @@
             <div class="d-flex">
               <div id="img-logo">
               </div>
-              <div class="ms-2 d-flex flex-column align-self-center">
+              <div class="ms-2 d-flex flex-column align-self-center logo-text">
                 <span>Apollo</span>
                 <span class="text-purple text-capitalize">tech</span>
               </div>
