--- a/homepage-vue/index.html
+++ b/homepage-vue/index.html
@@ -23,7 +23,7 @@
 
         <div class="header row">
 
-          <div class="col-md-2 logo d-flex justify-content-start">
+          <div class="col-sm-8 col-lg-2 logo d-flex justify-content-start">
             <div class="d-flex">
               <div id="img-logo">
               </div>
@@ -34,7 +34,7 @@
             </div>
           </div>
 
-          <nav class="d-none d-md-flex col-md-8 navbar  justify-content-center">
+          <nav class="d-none d-lg-flex col-lg-8 navbar  justify-content-center">
             <ul class="nav">
               <li class="nav-item"><a href="" class="nav-link nav-link-1 text-white">Home</a></li>
               <li class="nav-item"><a href="" class="nav-link text-white">Sobre</a></li>
@@ -44,7 +44,7 @@
             </ul>
           </nav>
 
-          <div class="d-none d-sm-flex col-md-2 justify-content-end">
+          <div class="d-none d-sm-flex col-sm-4 col-lg-2 justify-content-end">
             <button type="button" class="btn bg-purple text-white align-self-center">Marca uma reunião</button>
           </div>
         </div>
@@ -70,6 +70,58 @@
                 <p class="text-about">Seu passaporte para o futuro digital está nas nossas mãos. Desenvolvemos soluções inovadoras que catapultam sua presença online para o próximo nível. Estamos prontos para guiá-lo nessa jornada transformadora. Vamos criar juntos o caminho para o sucesso digital.</p>
             </div>
         </div>
+      </div>
+
+      <div id="section-service">
+        
+        <div class="content-service text-white text-center">
+          <h2 class="title-service">Nossos Serviços</h2>
+          <p class="text-service">Destaque-se na web com nossos serviços exclusivos.</p>
+        </div>
+
+        <div class="group-services text-white text-center row">
+
+          <div class="service col-12 col-md-4">
+            <div class="d-flex justify-content-center my-4">
+              <div class="bg-icon bg-white d-flex justify-content-center align-items-center">
+                <div id="icon-service-1" class="icon-service bg-white"></div>
+              </div>
+            </div>
+
+            <div>
+              <h3>Serviço 1</h3>
+              <p>Optimize manpower to benefit your business.</p>
+            </div>
+          </div>
+
+          <div class="service col-12 col-md-4">
+            <div class="d-flex justify-content-center my-4">
+              <div class="bg-icon bg-white d-flex justify-content-center align-items-center">
+                <div id="icon-service-2" class="icon-service bg-white"></div>
+              </div>
+            </div>
+
+            <div>
+              <h3>Serviço 1</h3>
+              <p>Optimize manpower to benefit your business.</p>
+            </div>
+          </div>
+
+          <div class="service col-12 col-md-4">
+            <div class="d-flex justify-content-center my-4">
+              <div class="bg-icon bg-white d-flex justify-content-center align-items-center">
+                <div id="icon-service-3" class="icon-service bg-white"></div>
+              </div>
+            </div>
+
+            <div>
+              <h3>Serviço 1</h3>
+              <p>Optimize manpower to benefit your business.</p>
+            </div>
+          </div>
+
+        </div>
+
       </div>
 
     </div>
