--- a/homepage-vue/index.html
+++ b/homepage-vue/index.html
@@ -88,7 +88,7 @@
               </div>
             </div>
 
-            <div>
+            <div class="p-5">
               <h3>Serviço 1</h3>
               <p>Optimize manpower to benefit your business.</p>
             </div>
@@ -101,7 +101,7 @@
               </div>
             </div>
 
-            <div>
+            <div class="p-5">
               <h3>Serviço 1</h3>
               <p>Optimize manpower to benefit your business.</p>
             </div>
@@ -114,13 +114,54 @@
               </div>
             </div>
 
-            <div>
+            <div class="p-5">
               <h3>Serviço 1</h3>
               <p>Optimize manpower to benefit your business.</p>
             </div>
           </div>
 
         </div>
+
+      </div>
+
+
+      <div id="section-project" class="bg-white">
+        
+        <div class="content-project text-center">
+          <h2 class="title-project text-black">Nossos <span class="text-purple">projetos</span></h2>
+          <p class="text-project text-black">Explore nossa galeria de realizações.</p>
+        </div>
+
+        <div class="gruop-projects row justify-content-between flex-column flex-md-row align-content-center">
+
+          <div class="project col-12 col-md-4">
+            <div class="bg-img-project" id="img-project-1">
+            </div>
+            <div class="text-black">
+              <h3 class="font-primary fw-bold text-uppercase">desenvolvimento Customizado</h3>
+              <p class="font-secondary">Criamos websites e aplicativos sob medida, alinhados às necessidades exclusivas do seu negócio. Do planejamento à implementação, nossa abordagem personalizada assegura que a solução final seja adaptada às metas específicas da sua empresa</p>
+            </div>
+          </div>
+
+          <div class="project col-12 col-md-4">
+            <div class="bg-img-project" id="img-project-2">
+            </div>
+            <div class="text-black">
+              <h3 class="font-primary fw-bold text-uppercase">práticas SEO avançadas</h3>
+              <p class="font-secondary">Maximize a visibilidade online com nossos serviços de otimização para motores de busca. Implementamos práticas SEO avançadas, garantindo que seu site esteja otimizado para os algoritmos de pesquisa, melhorando significativamente sua posição nos resultados e aumentando a relevância para seu público-alvo.</p>
+            </div>
+          </div>
+
+          <div class="project col-12 col-md-4">
+            <div class="bg-img-project" id="img-project-3">
+            </div>
+            <div class="text-black">
+              <h3 class="font-primary fw-bold text-uppercase">Design Responsivo</h3>
+              <p class="font-secondary">Oferecemos serviços de design web que vão além do visual, priorizando a usabilidade e a experiência do usuário. Desenvolvemos interfaces responsivas, garantindo uma navegação fluida e envolvente em dispositivos variados.</p>
+            </div>
+          </div>
+        </div>
+
 
       </div>
 
